--- a/index.html
+++ b/index.html
@@ -869,5 +869,59 @@
       </div>
     </section>
     <!-- Discount section end -->
+    <!-- footer section end -->
+    <section class="footer-section">
+      <img src="assete/img/bubble.png" alt="" class="footer-buble">
+      <div class="container">
+        <div class="footer-row">
+          <div class="footer-left">
+            <h2>Have a Questions? Feel Free to Ask..Feedback</h2>
+            <p>
+              Compellingly expedite mission-critical methodologies and
+              integrated. readiness without quality intellectual capital.
+            </p>
+            <a href="tel:97896744455" class="tel-btn"
+              ><span class="tel-icon"
+                ><i class="fa-solid fa-phone-volume"></i></span
+              >+978-9674-4455</a
+            >
+            <div class="footer-newsletter">
+              <h5>Get latest updates & offers</h5>
+              
+              <form class="newsletter-form">
+                <input type="email" placeholder="Enter your email...." name="email">
+                <button type="button" class="btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div class="footer-right">
+            <h4>Don’t late, join with us today!</h4>
+            <form class="contact-form">
+              <div class="input-group">
+                <input type="text" name="text" id="text" placeholder="Fast Name">
+                <input type="text" name="text" id="text" placeholder="Last Name">
+              </div>
+              <div class="input-group">
+                <input type="email" name="email" id="email" placeholder="Email">
+                <input type="tel" name="tel" id="tel" placeholder="Phone Number">
+              </div>
+              <textarea name="message" id="" placeholder="Massege" rows="10"></textarea>
+              <button type="button" class="btn-sendery">Submit <i class="fa-solid fa-arrow-right"></i></button>
+            </form>
+            <nav class="footer-nav">
+              <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Hire Us</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer section end -->
   </body>
 </html>
